Updated git history

--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,3 @@
-dist
-cabal-dev
-*.o
-*.hi
-*.chi
-*.chs.h
-.virtualenv
-.hsenv
-.cabal-sandbox/
-cabal.sandbox.config
-cabal.config
-*.swp
-*.annot
-*.cst.html
-*.fq*
-*.json
-*.html
-*.out
-*.smt2
-.liquid
-liquid-fixpoint
-liquidhaskell
+.stack-work/
+liquidHaskell-tut.cabal
+*~
