RGRef.hs typechecks and passes LH : still needs work

--- a/package.yaml
+++ b/package.yaml
@@ -27,6 +27,8 @@ library:
   dependencies:
   - liquidhaskell
   - time
+  - transformers
+  - template-haskell
 
 executables:
   liquidHaskell-tut-exe:
