Chore : cleaning up RGHaskell library

--- a/package.yaml
+++ b/package.yaml
@@ -23,9 +23,7 @@ dependencies:
 
 library:
   source-dirs:
-  - src/rgref/pos
-  - src/rgref/absref
-  - src/other
+  - src/
   dependencies:
   - liquidhaskell
   - time
