--- a/package.yaml
+++ b/package.yaml
@@ -1,7 +1,6 @@
 name:                rghaskell
 version:             0.2.0.0
 github:              "cbresendiz1/rghaskell"
-license:             BSD3
 author:              ""
 maintainer:          ""
 copyright:           ""
@@ -16,10 +15,18 @@ extra-source-files:
 # To avoid duplicated efforts in documentation and dealing with the
 # complications of embedding Haddock markup inside cabal files, it is
 # common to point users to the README.md file.
-description:         Please see the README on GitHub at <https://github.com/githubuser/liquidHaskell-tut#readme>
+# description:         Please see the README on GitHub at <https://github.com/cbresendiz1/liquidHaskell-tut#readme>
 
 dependencies:
 - base >= 4.7 && < 5
+
+extra-source-files: 
+#  - devel/Paths_liquidhaskell.hs
+#  - tests/other/*.hs
+  - tests/pos/*.hs
+  - tests/sf/*.hs
+  - tests/deppair/*.hs
+  - tests/list/*.hs
 
 library:
   source-dirs:
@@ -31,7 +38,7 @@ library:
   - template-haskell
 
 executables:
-  liquidHaskell-tut-exe:
+  rg-run:
     main:                Main.hs
     source-dirs:         app
     ghc-options:
@@ -42,12 +49,34 @@ executables:
     - rghaskell
 
 tests:
-  liquidHaskell-tut-test:
+  lh-test:
     main:                Spec.hs
-    source-dirs:         test
+    source-dirs:
+    - tests
+    - tests/sf/
     ghc-options:
     - -threaded
     - -rtsopts
     - -with-rtsopts=-N
     dependencies:
     - rghaskell
+    - base >= 4.8.1.0 && <5
+    - containers >= 0.5
+    - directory >= 1.2
+    - filepath >= 1.3
+    - mtl >= 2.1
+    - process >= 1.2
+    - optparse-applicative >= 0.11
+    - stm >= 2.4
+    - tagged >= 0.7.3
+    - tasty >= 0.7.3
+    - tasty-ant-xml
+    - tasty-hunit >= 0.9
+    - tasty-rerun >= 1.1
+    - transformers >= 0.3
+    - syb
+    - time
+    - liquidhaskell
+    - liquid-fixpoint
+    - hpc >= 0.6
+    - text
